Capstone Project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easy-notes-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: checkcheck-68428449.us-east-1.elb.amazonaws.com
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: easy-notes-service
                port:
                  number: 80
